--- a/connexion_contact/style.css
+++ b/connexion_contact/style.css
@@ -2,7 +2,7 @@
       margin: 0;
       padding: 0;
       font-family: sans-serif;
-      background-color: #f2f2f2;
+      background-color: #3f3f3f;
       height: 100vh;
       display: flex;
       justify-content: center;
