--- a/styleaccueil.css
+++ b/styleaccueil.css
@@ -2,8 +2,9 @@ body{
   margin:0px;
   display:block;
   padding:20px;
-  background: color #f2f2f2;
+  background-color: #3A3A3A;
 }
+
 .banniere{
   width:100%;
 }
@@ -39,8 +40,12 @@ li a{
 .titre_1_Accueil{
   width:100%;
   text-align: center;
+  color:#f2f2F2;
 }
 
+p{
+  color:#f2f2f2;
+}
 .article_accueil{
   width:26%;
   margin:25px;
